--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/27/n13050937.md#1" title="省钱大有门道 美国杂货店购物秘诀""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050945-shutterstock_1101833855-700x420-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/27/n13050458.md#1" title="知情者爆一带一路项目 大陆劳工命如草芥""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13050485-IMG_6617-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://yqjdaq390.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>16分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13052747.md#1">组图：西班牙疫情趋缓 政府取消户外口罩令</a><br>
-:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13052973.md#1">大陆17条河流发生超警以上洪水</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/27/n13050836.md#1">吉林六旬残疾老太遭冤判 坐轮椅关进看守所</a><br>
-:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053042.md#1">女儿日本营救被中共非法关押母亲 议员表示帮助</a><br>
-:clock8: <em>58分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053313.md#1">纽约州沃尔玛停车场枪案 1死3伤含15岁少女</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053208.md#1">环南市场打疫苗 现场混乱挨批无配套</a><br>
+:clock8: <em>10分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13052973.md#1">大陆17条河流发生超警以上洪水</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/27/n13050836.md#1">吉林六旬残疾老太遭冤判 坐轮椅关进看守所</a><br>
+:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053042.md#1">女儿日本营救被中共非法关押母亲 议员表示帮助</a><br>
+:clock8: <em>40分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053313.md#1">纽约州沃尔玛停车场枪案 1死3伤含15岁少女</a><br>
+:clock8: <em>41分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053208.md#1">环南市场打疫苗 现场混乱挨批无配套</a><br>
+:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053335.md#1">港蘋解散立场缩编 学者：中共开始清洗文化界</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/27/n13050237.md#1">白银马拉松致21死 官方报告出炉 细节惊人</a><br>
 <a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/26/n13049433.md#1">变种病毒载量高发病快 Delta攻入广东</a><br>
@@ -100,12 +100,12 @@
 <a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/23/n13042742.md#1">洁西卡胃酸倒流声带长茧 被医生劝诫放弃唱歌</a><br>
 <a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/23/n13042261.md#1">50城响应“全球行动日”抵制北京冬奥会</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.233.142.189/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,953</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.47.92.83/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,953</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 379,635,412 人
+!共 379,633,349 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052156.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13052210-GettyImages-71755591-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052156.md#1">中共删逾千万份判决书 疑图谋抹去不光彩记录</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051718.md#1">反酷刑日 受害者谈酷刑经历吁彻查大陆人权</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050675.md#1">宁夏女医生 法轮功学员陈淑琴遭冤判4年半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050758.md#1">维权律师蔺其磊发文指遭北京司法部门打压</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049650.md#1">中共威胁扣住疫苗 逼乌克兰退出新疆人权声明</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049264.md#1">辽宁访民姜家文被隔离半月 核酸检测后被拘</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052645.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052645.md#1">中共欲封闭海南岛建自由港 专家揭背后原因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050978.md#1">经济快速恢复美联储转鹰 冲击中国大陆经济</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051684.md#1">中共打压之下 科技公司IPO总额下降近2/3</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13051777.md#1">比特币遭中共打压 未来走势如何 业者分析</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051240.md#1">新研究：疫情造成美国人平均减寿一年</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051159.md#1">软件更新 特斯拉在中国召回近30万辆电动车</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052835.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/78335586f40c87336f0bb13911066d71@900x600-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052835.md#1">流亡医生：党要你去死 你就得去死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052566.md#1">陈用林：中共全面掌控香港为并吞台湾准备</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052397.md#1">中共十八大以来 392名省部级高官被查</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052270.md#1">日本对中共军事意图严重担忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051043.md#1">【珍言真语】何良懋：中共统治71年 学者作风倒退</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050881.md#1">广西钦州市检察院党组书记林俊被调查</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052973.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052973.md#1">大陆17条河流发生超警以上洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052681.md#1">中国南方多省大暴雨 未来三天南北方均降雨</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051626.md#1">甘肃马拉松官方报告出炉 细节惊人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050585.md#1">武汉突降暴雨 19省市有强对流天气</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13050646.md#1">英美澳对疫情三项新发现 条条反击中共甩锅</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/26/n13049298.md#1">局部洪水75年一遇 黑龙江多处将现超级洪峰</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052850.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052850.md#1">昔日大陆童星流落街头 捡垃圾桶食物果腹</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052316.md#1">外籍男打中国人引热议 警方2天后才将其行拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/28/n13052488.md#1">片仔癀每粒涨至上千元 价格暴涨的背后</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051612.md#1">黄日华忆亡妻洒泪：宁愿折寿20年换她回来</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051217.md#1">中共推特色学徒制 破坏学而优则仕传统 伤及全民</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/27/n13051460.md#1">性骚扰被实名举报 华中科大教授被停职</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044310.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id12992269-b58a2967de0209c670a3749056abca50-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/24/n13044310.md#1">杭州家长晒百万养娃账单 网民：生不起！</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13042700.md#1">孔子学院侵蚀学术自由 荷兰教育大臣吁取消</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037619.md#1">被传将参加大陆综艺节目 刘德华直接回应</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/10/n13014000.md#1">【独家】法治还是人治？ 文件曝中共谎言</a><br>
