--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -17,7 +17,6 @@
 <tr><td><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/5/14/n12950187.md#1" target="_blank">膝盖退化疼痛 锻炼臀肌才治本 1动作最推荐</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/5/14/n12950187.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/05/id12950802-exercise-0-5.14.21-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/13/n13019649.md#1" target="_blank">肾越好越长寿！中医师授养肾5秘诀</a><br></h3>
-<h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/17/n13029709.md#1" target="_blank">一周瘦2公斤、血糖快速降 三餐不减量减肥秘诀</a><br></h3>
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13037063.md#1" target="_blank">变胖可能是脾虚？3招养好脾 增肌又减肥</a><br></h3>
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/21/n13037340.md#1" target="_blank">瘦小腹很简单！消内脏脂肪食物前10名</a><br></h3>
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/23/n13041318.md#1" target="_blank">失恋伤痛恐招癌症！中医教你3个化解之道</a><br></h3>
@@ -27,5 +26,6 @@
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046730.md#1" target="_blank">冷气温度这样调最省电！6招吹冷气不用怕花钱</a><br></h3>
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13047332.md#1" target="_blank">【重播】影响疫苗效果的3个原因</a><br></h3>
 <h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13048027.md#1" target="_blank">牙周病是吃出来的？3类食物可能是元凶</a><br></h3>
+<h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13052817.md#1" target="_blank">早上喝一杯防便秘 营养师教你做早餐绿拿铁</a><br></h3>
 <tr><td><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md#1<br><a href="https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yqjdaq390/djy/blob/master/gb/nsc1002.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc1002.htm">https://www.epochtimes.com/gb/nsc1002.htm</a>    （国内需<a href="https://github.com/yqjdaq390/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
