--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -30,7 +30,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/14/n13020876.md#1" target="_blank">【命理】功名有无 寿命长短 都是上天给的</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/14/n13020876.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/03/7f72131a77b5bf01b0ec1ef30b1f171b-150x120.jpg" align ="left"></a>一个相貌言谈都很粗俗，没有什么可取之处的人怎能中举呢？清朝太平宰相刘墉之命中八字又是怎样的呢？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 9:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13048015.md#1" target="_blank">【忠义传】义薄云天的华夏战神关羽</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13048015.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13048025-LiuBei-GuanYu-150x120.png" align ="left"></a>在充斥着权谋与战火的汉末乱世，亲人会反目，盟友会背叛，如能遇到这样忠义两全的英雄豪杰，是多么难能可贵。开谈忠义之士，岂能不说与蜀汉第一武将、义薄云天的关公关羽？他的英雄事迹早已家喻户晓，比如温酒斩华雄、三英战吕布、斩颜良诛文丑、过五关斩六将、刮骨疗毒、义释曹操等等，无一不是三国迷心中的经典画面。不过这些故事，有的来自演.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月26日 6:58 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13039759.md#1" target="_blank">至暗时刻雄狮吼 勇气前行神光透（2）</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/22/n13039759.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13041141-S__178184198-150x120.jpg" align ="left"></a>温斯顿·丘吉尔（Winston Churchill，1874—1965）不仅是20世纪叱咤风云的政治领袖，而且是激励人心的一流演说家、荣获1953年诺贝尔文学奖的作家、悠然自得的业余画家。其是非功过虽有不少争议，但这位在至暗时刻发出雄壮狮吼的前首相仍被民众选为“最伟大的英国人”。其危难岁月卓越的领导力，至今仍为英美政要.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 6:00 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046979.md#1" target="_blank">前苏联海军总司令：帽状UFO从海中飞出</a><br></h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/25/n13046979.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/06/id13046990-shutterstock_538968583-150x120.jpg" align ="left"></a>美国海军曾证实，其战机飞行员于2004年在加州外海看到像白色薄荷糖状的不明飞行物（UFO）。而此类的UFO目击事件并非美国海军的专利。据前苏联海军总司令切尔纳温（Vladimir Nikolayevich Chernavin）透露，该国海军也遭遇过多起UFO目击事件，他自己就曾亲眼见到帽状UFO进出海面。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月25日 5:43 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053783.md#1" target="_blank">教师感言：疫起学起来</a><br></h3>虽然疫情严峻仍考验着大家的生活，但从这次不幸的事件里能跟孩子多了难能可贵的生命对谈与交流经验，这是上天给我们最好的礼物。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 12:48 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053519.md#1" target="_blank">歌词：故乡</a><br></h3>  故乡在何方 举头问穹苍 层层天宇美 闪闪金殿堂......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月29日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/28/n13053522.md#1" target="_blank">今月：快逃生</a><br></h3>百年的红船早已腐烂， 千般的粉饰徒具光鲜， 风雨里飘摇天怒人怨， 行将破碎埋葬深渊…......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月28日 11:12 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yqjdaq390/djy/blob/master/gb/21/6/24/n13044059.md#1" target="_blank">五律：夏季</a><br></h3> 适逢生长季， 入夏水犹频。 沛雨催新叶， 甘霖洗旧尘。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月27日 12:12 AM			</td></tr>
